--- a/Development_report.tex
+++ b/Development_report.tex
@@ -11,7 +11,7 @@
 \renewcommand{\baselinestretch}{1.0}
 \linespread{1.0}
 
-% load miscellaneo`us packages
+% load miscellaneo'us packages
 \usepackage{csquotes}
 \usepackage[american]{babel}
 \usepackage[usenames,dvipsnames]{color}
@@ -34,7 +34,7 @@ bookmarksopen=true,hyperfootnotes=false]{hyperref}
 
 \begin{document}
 \title{Development: The link between Manufacturing Employment and GDP per Capita}
-\author{Filippo Donà\thanks{Syracuse University, Economics Department. Email: kbuzard@syr.edu.} \and Lucia Rios-Luy\thanks{Syracuse University, Maxwell School of Citizenship and Public Affairs. Email: Lirioslu@syr.edu} \and Meghavarshini Iska \thanks{Syracuse University, Maxwell School of Citizenship and Public Affairs. Email: Meiska@syr.edu} \and Sergio Sotelo\thanks{abc}}
+\author{Filippo Donà\thanks{Syracuse University, Maxwell School of Citizenship and Public Affairs. Email:fadona@syr.edu} \and Lucia Rios-Luy\thanks{Syracuse University, Maxwell School of Citizenship and Public Affairs. Email: Lirioslu@syr.edu} \and Meghavarshini Iska \thanks{Syracuse University, Maxwell School of Citizenship and Public Affairs. Email: Meiska@syr.edu} \and Sergio Sotelo\thanks{Syracuse University, Maxwell School of Citizenship and Public Affairs. Email:spsotelo@syr.edu}}
 \date{\vskip-.1in \today}
 \maketitle
 
@@ -42,7 +42,7 @@ bookmarksopen=true,hyperfootnotes=false]{hyperref}
 \begin{center} {\bf Abstract} \end{center}
 
 \begin{quote}
-{\small We examine the link between GDP growth and manufacturing employment, hypothesizing that there is a negative relationship between manufacturing employment and GDP; As manufacturing employment decreases, GDP increases. We source statistics
+{\small We examine the link between GDP growth and manufacturing employment, hypothesizing that there is a negative relationship between manufacturing employment and GDP. Theoretically, we can conclude that the negative relationship is due to the decline in manufacturing employment; fewer people work in the manufacturing sector as economies advance to other means of services. Through imperial analysis, we see trends through the source statistics
 from Our World in Data charts, which examine these variables in all countries around the globe.
 We create a distinction between developing and developed countries. According to the World Bank, in 2021, the average GDP per capita globally was USD 20,271 (Fu and Rissanen, 2024), thus, we set the threshold at USD 20,000 Annual GDP per capita to distinguish between developing and developed economies. We conduct a correlation test to compare these variables across both developing and developed economies. 
 The research conducted supports the hypothesis that manufacturing plays a more significant role in driving economic growth in developing countries than in developed ones. The positive correlation in developing countries underscores the critical role of industrialization in the early stages of economic
@@ -70,36 +70,35 @@ Using data from Our World in Data, we analyze the relationship between manufactu
 
 % Discuss at least five papers that are closely related to your results (more is better). Explain how they're related. Did you find something similar, or different? Did you look at a different context? Different time period? Different level of detail?
 
-Previous research concerning the link between GDP, manufacturing, and quality of life index was analyzed. Michael Appiah et. al. researched how the Human Development Index specifically impacted GDP growth in African countries between 1990 and 2015, particularly focusing on how some African countries achieved a very high human development when controlling for inflation, capital, investment, labor, and foreign aid, finding that as the life expectancy increases in African nations, rise in human development through the rise of GDP is observed (Appiah et. al., 2019). 
+In recent decades, there has been a growing body of research examining the relationship between manufacturing employment and economic growth, especially in the context of developing countries. Historically, Manufacturing has been a significant economic development driver, particularly during the Industrial Revolution. According to Maddison (1983), centuries of resource exploitation, financial investments, and technological improvements were the main causes of Western Europe's wealth advantage prior to the Industrial Revolution. Western Europe was able to expand thanks to this early technological leap, which paved the way for contemporary capitalist economies. However, as Szirmai (2012) points out, industrial output in sections of Asia and Africa has frequently lagged, making it difficult for developing nations to catch up. The necessity to investigate the evolving role of manufacturing in economic development is highlighted by this difference between developed and developing countries.
 
-Similarly, Adam Szirmai researched how technological advancements during the Industrial Revolution boosted industrial output and economic growth in nations like Britain, while leaving others like Japan and African countries behind. Szirmai hypothesized that while manufacturing has historically driven economic growth in developing countries, there is a growing divergence of manufacturing employment from economic growth, specifically in the face of globalization and the rise of the service sector in many regions (Szirmai, 2012). 
+The relationship between human development and economic growth, mainly how improvements in human capital affect manufacturing employment, has been a focal point of study. Appiah, Amoasi, and Frowne (2019) highlight that rising life expectancy and better access to education in developing countries drive GDP growth by increasing productivity and strengthening manufacturing sectors. Human capital development is crucial for sustaining long-term growth as it enhances the workforce's ability to meet the demands of a rapidly changing economy. Foreign direct investment (FDI) also provides capital, technology, and expertise to support manufacturing growth in developing countries, mainly through export-oriented sectors.
 
-Angus Maddison's research focused on analyzing growth across developing and developed countries, comparing the preindustrial and postindustrial eras, finding that the preindustrial revolution wealth of Western Europe is a result of centuries of investment, exploitation of resources, and financial and technological advancements, which led to an economic lead that widened the income gap with developing countries (Maddison, 1983). 
+The dynamics of industrial employment have been profoundly changed by globalisation, primarily because its advantages have been concentrated in densely populated countries. According to Haraguchi et al. (2017), manufacturing is still crucial for economic expansion, but its influence is now concentrated in nations like China and India. As a result, many developing regions have experienced declining manufacturing employment despite the existing global opportunities. The globalization of supply chains and the rise of automation have further reshaped the manufacturing landscape, reducing employment growth in sectors traditionally reliant on labor-intensive industries, thereby creating a shift in the distribution of manufacturing's economic benefits.
 
-However, Nobuya Haraguchi questioned how the role of manufacturing in economic development and growth, in developing countries, has changed over the last 25 years, finding that industrialization remains a key factor in economic growth and development. Still, manufacturing has only become concentrated in a few countries, not diminishing overall (Haraguchi, 2017). 
-
-Lastly, Gerald Helleiner researched the effectiveness of direct foreign investment in promoting stable development finance, structural adjustment, and export-oriented growth, and which policies enhance or hinder its impact, hypothesizing that as FDI increases, so does political stability, exports, and standards of living. In summary, previous research has largely focused on local historical analyses that integrate policy-related factors into their realization.
+The character of economic growth has been profoundly altered by the fall in manufacturing's proportion of overall employment, especially in developing countries. Although economic growth is still crucial to these economies, Helleiner (1988) point out that the service sector is now the key engine of GDP growth, displacing manufacturing as the primary driver. At the same time, manufacturing's contribution to employment creation is declining due to technological developments like automation and artificial intelligence. Although manufacturing still adds to GDP, Szirmai (2012) and Haraguchi et al. (2017) point out that these advancements have reduced manufacturing's reliance on human labor. As economies evolve, the shift towards knowledge-based industries presents new challenges, underscoring the need for workforce adaptation and human capital development to sustain growth.
 
 \section{Theoretical Analysis}
 \label{sec:theory}
-%Optional–may include in intro if it’s short.
+%Optional–may include in intro if it's short.
 This paper examines how manufacturing employment has affected growth development over time and place. Explicitly, we look at how the manufacturing employment sector will impact the gross domestic product per capita (GDP per capita) in developed and developing countries. Within our data analysis, we have observed that the correlation is different in developed and developing countries. In contrast, in developed countries, we can see a negative and positive correlation within developing countries. As manufacturing employment decreases, GDP increases in developed regions, and as manufacturing employment increases, so does GDP per capita in developing countries. This idea stems from the economic transformation seen in advanced nations, where progress in technology and the rise of service-based industries have reduced reliance on manufacturing labor yet continued to fuel GDP expansion. Using automation and innovation, developed economies achieve greater productivity with a smaller manufacturing workforce. In contrast, developing nations with lower GDP per capita base their growth on using natural resources and a heavy dependence on agricultural growth. In addition, they have a great potential for manufacturing employment, as they have a high low-wage labor market. This theoretical perspective forms the basis for our empirical investigation into the relationship between manufacturing employment and economic growth in different stages of development.
 
 
 \section{Data}
 \label{sec:data}
 
-Our dataset was sourced from the \textit{Our World in Data} database, spanning from 1990 to 2019. The dataset offers a comprehensive view of global economic trends, allowing us to focus on GDP per capita and manufacturing employment shares as key variables. These variables were chosen for their ability to provide a foundation for analyzing the relationship between industrial activity and economic development across different stages of growth.
-    Countries were classified as either developed or developing based on a GDP per capita threshold of \$20,000 (adjusted for inflation). Countries exceeding this threshold were categorized as developed, while those below were categorized as developing. This classification yielded a sample of 40 developed and 60 developing countries. The primary variables used in the analysis include manufacturing employment share, which measures the percentage of the workforce employed in manufacturing, and GDP per capita, an indicator of a country's economic output per person. 
-    To ensure consistent comparisons across countries, we focused on annual data for these variables, aggregating observations to minimize missing values and improve data reliability. The dataset captures long-term global trends, offering valuable insights into the interplay between manufacturing employment and economic growth.
+Our dataset was sourced from the \href{https://ourworldindata.org/}{Our World in Data} database, spanning from 1990 to 2019. The dataset offers a comprehensive view of global economic trends, allowing us to focus on GDP per capita, an indicator of a country's economic output per person, and manufacturing employment shares, which measures the percentage of the workforce employed in manufacturing as key variables. These variables were chosen for their ability to provide a foundation for analyzing the relationship between industrial activity and economic development across different stages of growth.
+    Countries were classified as either developed or developing based on a GDP per capita threshold of \$20,000 (adjusted for inflation). Countries exceeding this threshold were categorized as developed, while those below were categorized as developing. This classification yielded a sample of 75 developed and 112 developing countries. The classification of developed and developing countries is primarily influenced by population size, with smaller countries often having higher numbers. We excluded missing data points to minimize missing values and improve data reliability, mainly data points from equal to and above 2019. The dataset captures long-term global trends, offering valuable insights into the interplay between manufacturing employment and economic growth.
     The dataset stops at 2019 to avoid the confounding effects of the COVID-19 pandemic, which introduced unprecedented disruptions to global economies and labor markets. The pandemic caused significant shifts in employment structures and economic activity, particularly in the manufacturing sector, as governments worldwide imposed lockdowns and supply chains were disrupted. Including data from 2020 onwards could bias the results, as these years reflect extraordinary conditions rather than typical economic trends.
+
+\footnote{United Nations Industrial Development Organization and International Labour Organization – processed by Our World In Data}
 
 \section{Results}
 \label{sec:result}
 
-    In the first part of our analysis, we examine how the relationship between manufacturing employment and GDP per capita differs between developed and developing countries from 1990 to 2019. Developed countries consistently exhibit higher GDP per capita and manufacturing employment shares, although the latter shows a steady decline over time. Developing countries display lower averages for both variables, but with greater variability in GDP per capita, highlighting structural disparities and economic volatility.
+    In our analysis, we examine how the relationship between manufacturing employment and GDP per capita differs between developed and developing countries from 1990 to 2019. Developing countries display lower averages for both variables, but with greater variability in GDP per capita, highlighting structural disparities and economic volatility.
     Developed countries demonstrate higher averages for both manufacturing employment shares (14.38\%) and GDP per capita (\$36,008.31). In contrast, developing countries show lower averages, with a manufacturing employment share of 10.55\% and GDP per capita of \$17,577.51. Variability is also more pronounced in developing countries, as evidenced by a standard deviation in GDP per capita of \$20,173.73, compared to \$21,577.48 for developed countries. Table 1 summarizes these differences, providing a statistical basis for analyzing structural disparities between the two groups.
-\begin{table}[h!]
+\begin{table}[ht]
 \centering
 \caption{Summary Statistics for Developing and Developed Countries}
 \begin{tabular}{|l|c|c|c|}
@@ -114,16 +113,15 @@ GDP per Capita (USD) & 36,008.31 & 34,200.00 & 21,577.48 \\ \hline
 \end{tabular}
 \label{table 1}
 \end{table}
-    These trends align with the theory of structural transformation, which describes the transition of economies from reliance on agriculture to manufacturing and eventually to services. Developing countries, which are typically in the earlier stages of this transition, rely heavily on industrialization as a driver of growth. This reliance makes them more susceptible to external shocks, such as global demand shifts or resource price fluctuations. Developed countries, having completed much of this transition, rely more on service and technology sectors for economic growth.
-    We then analyzed the trends in manufacturing employment shares and GDP per capita over time. As shown in Figure 1, manufacturing employment shares in developing countries exhibit cyclical patterns, reflecting the volatility associated with industrial growth. It can be concluded that peaks are associated with periods of rapid industrial expansion, while declines correspond to economic slowdowns. In contrast, developed countries show a steady decline in manufacturing employment shares, reflecting their transition to service-based economies. Figure 2 highlights the trajectory of GDP per capita, where developing countries show steady, albeit slower, growth over time compared to the more consistent upward trend in developed countries.
 
-(Manufacturing Employment in Developing vs. Developed Countries Over Time  (Figure 1)
+\footnotetext{Data sourced from Our World in Data, analyzed in Stata.}
 
-(GDP per Capita in Developing vs. Developed Countries Over Time (Figure 2))
+    These trends align with the theory of structural transformation, which describes the transition of economies from reliance on agriculture to manufacturing and services. Developing countries, typically in the earlier stages of this transition, rely heavily on industrialization as a growth driver. This reliance makes them more susceptible to external shocks, such as global demand shifts or resource price fluctuations. Having completed much of this transition, developed countries rely more on service and technology sectors for economic growth.
+    We then analyzed the manufacturing employment shares and GDP per capita trends over time.
 
-    To validate these observations, we conducted a two-sample t-test to compare the mean manufacturing employment shares between developed and developing countries. The results confirm a statistically significant difference (p<0.05), supporting the hypothesis that manufacturing employment shares are lower on average in developing countries. Table 2 summarizes the results of this comparison and provides further details on the statistical significance of the observed differences. 
-    To further assess the impact of manufacturing employment on GDP per capita, we performed regression analyses for both developed and developing countries. For developing countries, the results indicate that a one-percentage-point increase in manufacturing employment share corresponds to an estimated \$1,000 increase in GDP per capita (R2=0.65,p<0.01R2). In developed countries, however, the relationship is weaker and statistically insignificant (p>0.05p). These results, also summarized in Table 2, demonstrate the critical role of manufacturing employment in driving economic growth during early stages of development, while highlighting its diminished importance in post-industrial economies.
-\begin{table}[h!]
+    We conducted a two-sample t-test to validate these observations to compare the mean manufacturing employment shares between developed and developing countries. The results confirm a statistically significant difference (p<0.05), supporting the hypothesis that manufacturing employment shares are lower on average in developing countries. Table 2 summarizes the results of this comparison and provides further details on the statistical significance of the observed differences. 
+    To further assess the impact of manufacturing employment on GDP per capita, we performed regression analyses for developed and developing countries. For developing countries, the results indicate that a one-percentage-point increase in the share of manufacturing employment corresponds to an estimated \$1,000 increase in GDP per capita (R2=0.65,p<0.01R2). However, in developed countries, the relationship is weaker and statistically insignificant (p>0.05p). These results, also summarized in Table 2, demonstrate the critical role of manufacturing employment in driving economic growth during the early stages of development while highlighting its diminished importance in postindustrial economies.
+\begin{table}[ht]
 \centering
 \caption{Statistical Analysis Results}
 \begin{tabular}{|l|c|}
@@ -136,45 +134,40 @@ Regression Coefficient for Developed Countries & Insignificant (\$p > 0.05\$) \\
 \label{table 2}
 \end{table}
    
-    These results suggest that developing countries rely more heavily on manufacturing employment for economic growth compared to developed nations. In developed countries, the transition to service-based industries has reduced the dependence on manufacturing as a driver of GDP growth. This supports our hypothesis that the relationship between manufacturing employment and GDP per capita varies significantly by stage of economic development.
-    These findings highlight the importance of understanding how the relationship between manufacturing employment and GDP evolves over time. For developing countries, industrialization remains a critical pathway to economic growth, but for developed economies, the focus must shift toward advanced services and technology sectors.
+    These results suggest that developing countries rely more heavily on manufacturing employment for economic growth than developed nations. In developed countries, the transition to service-based industries has reduced the dependence on manufacturing as a driver of GDP growth. This supports our hypothesis that the relationship between manufacturing employment and GDP per capita varies significantly by stage of economic development.
+    These findings highlight the importance of understanding how the relationship between manufacturing employment and GDP evolves. For developing countries, industrialization remains a critical pathway to economic growth, but for developed economies, the focus must shift toward advanced services and technology sectors.
 
-\begin{figure}
+Figure 1 supports the idea that as countries become more developed, they rely less on manufacturing and more on sectors like services or technology, with manufacturing representing a smaller portion of total employment. The concentration of data points between 5 percent to 20 percent in manufacturing and GDP per capita ranging from 0 USD to 100,000 USD illustrates this trend, though there are noticeable outliers where manufacturing remains high, but GDP per capita does not follow the general pattern. These outliers could suggest unique economies or data inconsistencies. The negative correlation observed aligns with economic theories, such as the Rostow model, which describes how economies shift from manufacturing to service-based industries as they mature and develop.
+
+\begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.5\linewidth]{Variable Graphs/New Scatterplot_Dvlped.png}
+    \includegraphics[width=0.75\linewidth]{Reproducibility Package/Variable Graphs/Developed New.png}
     \caption{All Data sets of GDP per Capita with Manufacturing Employment}
-    \label{figure 1}
+    \label{fig:enter-label}
 \end{figure}
 
-Figure 1 supports the idea that as countries become more developed, they rely less on manufacturing and more on sectors like services or technology, with manufacturing representing a smaller portion of total employment. The concentration of data points between 5 percent to 20 percent in manufacturing and GDP per capita ranging from 0 USD to 100,000 USD illustrates this trend, though there are noticeable outliers where manufacturing remains high but GDP per capita does not follow the general pattern. These outliers could suggest unique economies or data inconsistencies. The negative correlation observed aligns with economic theories, such as the Rostow model, which describes how economies shift from manufacturing to service-based industries as they mature and develop.
-Similarly, the 
+Similarly, figure 2 shows a dense concentration of developing countries with manufacturing employment between 0 and 20 percent and GDP per capita below 50,000 USD due to the threshold of 20,000 USD. This suggests that while manufacturing plays a significant role in these economies, it is insufficient to drive substantial GDP growth, as there is no clear positive or negative correlation between the two variables. Most countries have low GDP per capita values, regardless of their manufacturing employment levels.
 
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\linewidth]{Variable Graphs/New Scatterplot_Dvping.png}
-    \caption{All Data sets of GDP per Capita with Manufacturing Employment}
-    \label{figure 2}
-\end{figure}
-Figure 2 shows a dense concentration of developing countries with manufacturing employment between 0  and 20 percent and GDP per capita below 50,000 USD due to the threshold set as 20,000 USD. This suggests that while manufacturing plays a significant role in these economies, it is not sufficient to drive substantial GDP growth, as there is no clear positive or negative correlation between the two variables. Most countries remain at low GDP per capita values, regardless of their manufacturing employment levels.
 
 \section{Discussion}
 \label{sec:discussion}
 
-    Our findings highlight the relationship between manufacturing employment and GDP per capita, emphasizing the roles manufacturing plays in developed and developing economies. The results provide support for structural transformation theories, which suggest that economies transition from reliance on manufacturing to service-oriented sectors as they develop. However, the differences observed between developed and developing countries point to critical implications for policymakers and future research.
-    In developing countries, we observed a positive correlation between manufacturing employment and GDP per capita. This goes to show the role of industrialization in early stages of economic growth. Developing countries often rely heavily on labor-intensive manufacturing sectors to drive economic expansion, leveraging their abundant low-cost labor forces. Moreover, the strong regression coefficient observed in our analysis highlights the potential of increasing manufacturing employment shares in these economies. For policymakers in developing nations, this indicates that fostering industrialization and supporting manufacturing sectors through investments in infrastructure, technology, and workforce development remains vital to achieving sustainable economic growth. On the other hand, in developed countries, we found a negative correlation between manufacturing employment and GDP per capita. This reflects the observed shift toward service-oriented and knowledge-driven economies in these nations. The decline in manufacturing employment shares, combined with sustained GDP growth, reflects the increased productivity of advanced manufacturing and the rising dominance of sectors such as technology, finance, and healthcare. For developed nations, this suggests that policies should prioritize fostering innovation, enhancing productivity in high-tech manufacturing, and investing in the service sector to sustain economic growth. 
-    Our analysis is subject to several limitations that require consideration. First, the use of aggregate data may obscure regional or country-specific variations that could provide further insights. For instance, some developing nations might experience unique trajectories due to differences in resources, governance, or integration into global trade networks. Similarly, the varying availability of data across countries and years may introduce inconsistencies, particularly in developing countries where data gaps are more prevalent. Addressing these gaps in future research by leveraging more granular data could enhance the robustness of the findings.
-    Second, while the distinction between developed and developing countries based on GDP per capita provides a useful framework, it does not account for other factors that influence economic structures, such as institutional quality or access to global markets. Future studies could incorporate additional variables, such as trade openness, education levels, or technological adoption, to better understand the drivers of manufacturing’s impact on economic growth.
-    Lastly, the exclusion of data post-2019 to avoid the confounding effects of the COVID-19 pandemic, while necessary, limits the ability to assess how global crises impact the manufacturing-GDP relationship. Future research could explore how external shocks, such as pandemics, reshape the role of manufacturing in both developed and developing economies.
-    Our findings carry important policy implications. For developing nations, strategies to strengthen manufacturing sectors can lead to economic growth and facilitate structural transformation. Investments in industrial policies and trade agreements that promote manufacturing exports are particularly critical. For developed countries, the focus should shift to fostering innovation in advanced manufacturing while embracing the growth of service-oriented sectors. Additionally, understanding the long-term implications of these transitions for labor markets and income inequality remains an essential area for further investigation.
-    In conclusion, our analysis demonstrates the pivotal but evolving role of manufacturing employment in economic development. While developing countries benefit significantly from industrialization, developed nations exemplify the transition toward service-based economies. These findings underscore the importance of tailored economic policies that reflect a country’s stage of development and structural characteristics. By addressing the limitations identified and expanding the scope of future research, we can deepen our understanding of the manufacturing-GDP relationship and its implications for sustainable economic growth.
+    Our findings highlight the relationship between manufacturing employment and GDP per capita, emphasizing the roles manufacturing plays in developed and developing economies. The results support structural transformation theories, suggesting that economies transition from reliance on manufacturing to service-oriented sectors as they develop. However, the differences observed between developed and developing countries have critical implications for policymakers and future research.
+    In developing countries, we observed a positive correlation between manufacturing employment and GDP per capita. This goes to show the role of industrialization in early stages of economic growth. Developing countries rely heavily on labor-intensive manufacturing sectors to drive economic expansion, leveraging their abundant, low-cost labor forces. Moreover, the strong regression coefficient observed in our analysis highlights the potential of increasing manufacturing employment shares in these economies. For policymakers in developing nations, this indicates that fostering industrialization and supporting manufacturing sectors through investments in infrastructure, technology, and workforce development remains vital to achieving sustainable economic growth. On the other hand, in developed countries, we found a negative correlation between manufacturing employment and GDP per capita. This reflects the observed shift toward service-oriented and knowledge-driven economies in these nations. The decline in manufacturing employment shares, combined with sustained GDP growth, reflects the increased productivity of advanced manufacturing and the rising dominance of sectors such as technology, finance, and healthcare. For developed nations, this suggests that policies should prioritize fostering innovation, enhancing productivity in high-tech manufacturing, and investing in the service sector to sustain economic growth. 
+    Our analysis is subject to several limitations that require consideration. First, globally averaged data may obscure regional or country-specific variations that could provide further insights. For instance, some developing nations might experience unique trajectories due to differences in resources, governance, or integration into global trade networks. Similarly, the varying availability of data across countries and years may introduce inconsistencies, particularly in developing countries where data gaps are more prevalent. Addressing these gaps in future research by leveraging more granular data could enhance the robustness of the findings.
+    Second, while the distinction between developed and developing countries based on GDP per capita provides a valuable framework, it does not account for other factors that influence economic structures, such as institutional quality or access to global markets. Future studies could incorporate additional variables, such as trade openness, education levels, or technological adoption, to better understand the drivers of manufacturing's impact on economic growth.
+    Lastly, excluding data post-2019 to avoid the confounding effects of the COVID-19 pandemic, while necessary, limits the ability to assess how global crises impact the manufacturing-GDP relationship. Future research could explore how external shocks, such as pandemics, reshape the role of manufacturing in both developed and developing economies.
+    Our findings carry important policy implications. For developing nations, strategies to strengthen manufacturing sectors can lead to economic growth and facilitate structural transformation. Investments in industrial policies and trade agreements that promote manufacturing exports are particularly critical. For developed countries, the focus should shift to fostering innovation in advanced manufacturing while embracing the growth of service-oriented sectors. Additionally, understanding the long-term implications of these transitions for labor markets and income inequality remains an essential area for further investigation. To further analyze the effects of manufacturing, we can observe the cyclical structure of economies, as even in highly serviced markets, it is essential to keep the primary sector running, especially agriculture. 
+    In conclusion, our analysis demonstrates manufacturing employment's pivotal but evolving role in economic development. While developing countries benefit significantly from industrialization, developed nations exemplify the transition toward service-based economies. These findings underscore the importance of tailored economic policies that reflect a country's stage of development and structural characteristics. By addressing the limitations identified and expanding the scope of future research, we can deepen our understanding of the manufacturing-GDP relationship and its implications for sustainable economic growth.
 
 
 \section{Conclusion}
 \label{sec:conclusion}
 
-Manufacturing and economic growth are unequivocally linked. Previous literature has largely focused on the shift toward manufacturing across time, starting from the industrial revolution, and the income gaps that have risen across the world today.  We examined the relationship between manufacturing and GDP, and how this differs between developed and developing countries.
+Manufacturing and economic growth are unequivocally linked. Previous literature has focused mainly on the shift toward manufacturing over time, starting from the Industrial Revolution and the income gaps that have risen worldwide today.  We examined the relationship between manufacturing and GDP, and how this differs between developed and developing countries.
 
-We found that there is a significant negative relationship between manufacturing employment and real GDP, which means that we reject our null hypothesis. The study we conducted examines developed and developing countries, and with out findings we suggest that economies transition toward service-oriented sectors as they develop. Moreover,we believe that our study emphasizes the importance of economic policies that are adapted and adjusted to a country's period of development. 
+We found a significant negative relationship between manufacturing employment and real GDP, so we reject our null hypothesis. The study we conducted examines developed and developing countries, and without findings, we suggest that economies transition toward service-oriented sectors as they develop. Moreover, we believe that our study emphasizes the importance of economic policies that are adapted and adjusted to a country's period of development. 
+
 \newpage
 \section*{Bibliography}
 \singlespacing
@@ -190,7 +183,7 @@ Helleiner, G. K. (1988). Direct foreign investment and manufacturing for export 
 
 Maddison, A. (1983). A comparison of levels of GDP per capita in developed and developing countries, 1700–1980. The Journal of Economic History, 43(1), 27–41.
 
-Szirmai, Adam. “Industrialisation as an Engine of Growth in Developing Countries, 1950–2005.” Structural Change and Economic Dynamics, vol. 23, no. 4, Dec. 2012, pp. 406–420, \href{https://doi.org/10.1016/j.strueco.2011.01.005}{https://doi.org/10.1016/j.strueco.2011.01.005}.
+Szirmai, Adam. "Industrialisation as an Engine of Growth in Developing Countries, 1950–2005." Structural Change and Economic Dynamics, vol. 23, no. 4, Dec. 2012, pp. 406–420, \href{https://doi.org/10.1016/j.strueco.2011.01.005}{https://doi.org/10.1016/j.strueco.2011.01.005}.
 
 Rostow, W. W. (1959). The Stages of Economic Growth. The Economic History Review, 12(1), 1–16. https://doi.org/10.2307/2591077
 
